--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,21 @@
 {
   "name": "CNC Manager Pro",
-  "short_name": "CNC Database",
-  "description": "Gestione database pezzi e costi CNC",
-  "start_url": "index.html",
+  "short_name": "CNC Pro",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f8fafc",
   "theme_color": "#4f46e5",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/2092/2092141.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/2092/2092141.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     }
   ]
 }
